--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,5 +6,20 @@
                  android:icon="@mipmap/ic_launcher"
                  android:roundIcon="@mipmap/ic_launcher_round"
                  android:supportsRtl="true"
-                 android:theme="@style/AppTheme"/>
+                 android:theme="@style/AppTheme">
+    <activity
+            android:name=".ui.flights.FlightsActivity"
+            android:label="@string/app_name">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN"/>
+
+            <category android:name="android.intent.category.LAUNCHER"/>
+        </intent-filter>
+    </activity>
+    <activity
+            android:name=".ui.details.DetailsActivity"
+            android:label="@string/flightdetails_name">
+    </activity>
+    </application>
+
 </manifest>
