--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,33 +7,18 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "hu.bme.aut.android.kotifydemo"
+        applicationId "com.example.airplanes"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 4
-        versionName "1.3"
+        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    signingConfigs {
-        debug {
-            storeFile file("../KotifyDemo_debug.keystore")
-        }
-        release {
-            storeFile file("../KotifyDemo.keystore")
-            storePassword System.getenv('STORE_PASSWORD')
-            keyAlias "KotifyDemo"
-            keyPassword System.getenv('KEY_PASSWORD')
-
-        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release;
-        }
-        debug {
-            signingConfig signingConfigs.debug;
+
         }
     }
     /*
@@ -60,6 +45,7 @@ dependencies {
     implementation kotlinDependencies.stdlib
 
     implementation supportDependencies.appcompat
+    implementation supportDependencies.constaint_layout
     implementation supportDependencies.cardview
     implementation supportDependencies.design
 
