--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,12 +43,13 @@ android {
 
 dependencies {
     implementation kotlinDependencies.stdlib
-
+    implementation 'com.android.volley:volley:1.1.1'
     implementation supportDependencies.appcompat
     implementation supportDependencies.constaint_layout
     implementation supportDependencies.cardview
     implementation supportDependencies.design
-
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
     implementation toolkitDependencies.okhttp
     implementation toolkitDependencies.logging
