--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -48,7 +48,8 @@ ext {
             gson                 : "com.google.code.gson:gson:$gson_version",
 
             glide                : "com.github.bumptech.glide:glide:$glide_version",
-            eventbus             : "org.greenrobot:eventbus:$eventbus_version"
+            eventbus             : "org.greenrobot:eventbus:$eventbus_version",
+
     ]
 
     daggerDependencies = [
