--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,31 @@ android {
     }
 }
 
+ext {
+    swagger_annotations_version = "1.5.0"
+    gson_version = "2.3.1"
+    httpmime_version = "4.5.2"
+    httpcore_version = "4.4.4"
+    httpclient_version = "4.3.3"
+    volley_version = "1.0.0"
+    junit_version = "4.12"
+    robolectric_version = "3.0"
+    concurrent_unit_version = "0.4.2"
+}
+
 dependencies {
+
+    implementation "io.swagger:swagger-annotations:$swagger_annotations_version"
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "org.apache.httpcomponents:httpcore:$httpcore_version"
+    implementation "org.apache.httpcomponents:httpmime:$httpmime_version"
+    implementation "org.apache.httpcomponents:httpclient-android:$httpclient_version"
+    implementation "com.android.volley:volley:${volley_version}"
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "org.robolectric:robolectric:${robolectric_version}"
+    testImplementation "net.jodah:concurrentunit:${concurrent_unit_version}"
+
+
     implementation kotlinDependencies.stdlib
     implementation 'com.android.volley:volley:1.1.1'
     implementation supportDependencies.appcompat
