--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,12 @@ dependencies {
 
     implementation "io.swagger:swagger-annotations:$swagger_annotations_version"
     implementation "com.google.code.gson:gson:$gson_version"
-   
+
+    implementation "org.apache.httpcomponents:httpcore:$httpcore_version"
+    // implementation "org.apache.httpcomponents:httpmime:$httpmime_version"
+    // implementation "org.apache.httpcomponents:httpclient-android:$httpclient_version"
+
+
     implementation "com.android.volley:volley:${volley_version}"
     testImplementation "junit:junit:$junit_version"
     testImplementation "org.robolectric:robolectric:${robolectric_version}"
