Modify gradle no.3

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     implementation "com.google.code.gson:gson:$gson_version"
 
     implementation "org.apache.httpcomponents:httpcore:$httpcore_version"
-    // implementation "org.apache.httpcomponents:httpmime:$httpmime_version"
+    implementation "org.apache.httpcomponents:httpmime:$httpmime_version"
     // implementation "org.apache.httpcomponents:httpclient-android:$httpclient_version"
 
 
