--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -27,6 +27,8 @@ ext {
     espresso_version = "3.0.2"
     robolectric_version = "4.1"
 
+
+
     kotlinDependencies = [
             stdlib: "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     ]
@@ -49,8 +51,12 @@ ext {
 
             glide                : "com.github.bumptech.glide:glide:$glide_version",
             eventbus             : "org.greenrobot:eventbus:$eventbus_version",
-
+            moshikotlin          : "com.squareup.moshi:moshi-kotlin:1.5.0",
+            moshiadapters        : "com.squareup.moshi:moshi-adapters:1.5.0",
+            threeten             : "org.threeten:threetenbp:1.3.6"
     ]
+
+
 
     daggerDependencies = [
             dagger    : "com.google.dagger:dagger:$dagger_version",
@@ -62,6 +68,7 @@ ext {
             junit             : "junit:junit:$junit_version",
             robolectric       : "org.robolectric:robolectric:$robolectric_version",
             mockito           : "org.mockito:mockito-core:$mockito_version",
+            kotlintest        : "io.kotlintest:kotlintest:2.0.2"
     ]
 
     instrumentationTestDependencies = [
