--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         applicationId "com.example.airplanes"
         minSdkVersion 19
         targetSdkVersion 28
+
         versionCode 4
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -46,7 +47,7 @@ dependencies {
 
 
 
-
+    
     implementation kotlinDependencies.stdlib
     implementation 'com.android.volley:volley:1.1.1'
     implementation supportDependencies.appcompat
@@ -96,4 +97,5 @@ dependencies {
     androidTestImplementation daggerDependencies.dagger
     androidTestImplementation daggerDependencies.annotation
     kaptAndroidTest daggerDependencies.compiler
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
