--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,9 @@ dependencies {
     implementation supportDependencies.constaint_layout
     implementation supportDependencies.cardview
     implementation supportDependencies.design
+
     implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    kapt "android.arch.persistence.room:compiler:1.0.0"
 
     implementation toolkitDependencies.okhttp
     implementation toolkitDependencies.logging
